<resources>
    <string name="app_name">Honda DSP</string>
    <string name="textview">TextView</string>
    <string name="fad">Fad</string>
    <string name="bal">Bal</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="balans">Balans:</string>
    <string name="high">High</string>
    <string name="mid">Mid</string>
    <string name="low">Low</string>
    <string name="off">Off</string>
    <string name="svc">SVC</string>
    <string name="subwoffer">Subwoffer:</string>
    <string name="center">Center:</string>
    <string name="treble">Treble:</string>
    <string name="bass">Bass:</string>
    <string name="sub">Sub</string>
    <string name="treble2">Treble2</string>
    <string name="basy">Basy</string>
    <string name="volume">Volume</string>
    <string name="center2">Center2</string>
    <string name="fader">Fader:</string>
    <string name="hexy">hexy</string>
    <string name="speedo_meter">Speedo Meter</string>
    <string name="location_permission">Need Location Permission</string>
    <string name="permission_description">This app needs location permission.</string>
    <string name="permission_grant">Grant</string>
    <string name="permission_cancel">Cancel</string>
    <string name="goto_settings">Go to Permissions to Grant Location</string>
    <string name="unable_toget_permission">Unable to get Permission</string>
    <string name="start_service">Start Service</string>
    <string name="no_gps">- -</string>
    <string name="stop_service">Stop Service</string>
    <string name="vol_a">vol_a</string>
    <string name="volume2">Volume:</string>
    <string name="gps_speed">GPS Speed:</string>
    <string name="switch22">Switch</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="f">F</string>
    <string name="app_sys_volume">App/Sys Volume</string>
    <string name="test_gps_speed">Test/GPS Speed</string>
    <string name="version">v1.6 by Rupert</string>
    <string name="app">APP</string>
    <string name="sys">SYS</string>
    <string name="crc">CRC</string>
    <string name="amp_answer">Amp Answer</string>
    <string name="amp">Amp</string>
    <string name="amperrors">ampErrors</string>
</resources>